NAS-114410: Fixed scroll gap when modal is opened

--- a/src/app/pages/common/entity/entity-form/components/form-scheduler/form-scheduler.component.scss
+++ b/src/app/pages/common/entity/entity-form/components/form-scheduler/form-scheduler.component.scss
@@ -15,8 +15,6 @@ button.close-btn {
   left: 50%;
   max-height: calc(100vh - 100px);
   overflow: hidden;
-  overflow-y: auto;
-  padding: 0 0 0 300px;
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -75,7 +73,7 @@ ul.schedule-list li:nth-child(odd) {
 
 .cron-fields {
   background-color: var(--bg2);
-  margin-left: 300px;
+  margin-left: 310px;
   min-height: 100%;
   padding: 0;
   text-align: center;
@@ -219,6 +217,20 @@ mat-form-field.cron-presets {
 #no-spaces {
   font-size: 85%;
   margin-bottom: 8px;
+}
+
+@media screen and (max-height:900px) {
+  .advanced-date-picker.mat-card {
+    overflow-y: auto;
+  }
+
+  .cron-fields {
+    margin-left: 300px;
+  }
+
+  button.close-btn {
+    left: 590px;
+  }
 }
 @media screen and (max-width:700px) {
   .advanced-date-picker.mat-card {
